Re-enabling Widfly integration tests